[ADD] getFixCost endpoint
